# notesys

./: .env.example  .gitignore  Makefile  README.md  README_EN.md  pyproject.toml
config/: categories.yaml  models.yaml
docs/: ADMIN.md  API.md
src/: main.py
src/agents/organizer/: chunker.py  embedder.py  image_extractor.py  note_classifier.py  note_formatter.py  pipeline.py
src/agents/querier/: pipeline.py  retriever.py  rewriter.py  synthesizer.py
src/api/: organize.py  query.py
src/core/: config.py  events.py  retry.py  usage_tracker.py
src/llm/: client.py
src/llm/prompts/: image_semantic.txt  note_classify.txt  note_format.txt  query_rewrite.txt  query_synthesize.txt
src/models/: note.py  task.py
src/storage/: file_manager.py  vector_store.py
src/sync/: scanner.py  service.py
tests/: run_organize.py  run_query.py  test_core.py  test_integration.py  test_organize_e2e.py  test_query_e2e.py  test_structural_safety.py
